TestCases/ASTTests/SemanticErrorsTests/CreateTests/read_file_after.dot
digraph AST {
  "128449130651968" [label="Start"];
  "128449130651968" -> "128449130654704";
  "128449130654704" [label="Code"];
  "128449130654704" -> "128449130654848";
  "128449130654848" [label="Function"];
  "128449130654848" -> "128449130654944";
  "128449130654848" -> "128449130654992";
  "128449130654848" -> "128449130655040";
  "128449130654944" [label="main IDENTIFIER"];
  "128449130654992" [label="Parameters"];
  "128449130655040" [label="Code"];
  "128449130655040" -> "128449130655136";
  "128449130655040" -> "128449130655184";
  "128449130655136" [label="Code"];
  "128449130655136" -> "128449130655232";
  "128449130655232" [label="Declaration"];
  "128449130655232" -> "128449130655328";
  "128449130655232" -> "128449130655376";
  "128449130655328" [label="x IDENTIFIER"];
  "128449130655376" [label="1 INT"];
  "128449130655184" [label="Code"];
  "128449130655184" -> "128449130655424";
  "128449130655424" [label="Declaration"];
  "128449130655424" -> "128449130655520";
  "128449130655424" -> "128449130655568";
  "128449130655520" [label="x IDENTIFIER"];
  "128449130655568" [label="2 INT"];
}
